src/objects/District__c/District__c.object-meta.xml
<CustomObject>
    <label>District</label>
    <nameField>
        <label>District  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>