src/objects/District__c/fields/District_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>District_Pin_Code__c</fullName>
    <label>District Pin Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>