src/objects/District__c/fields/Identification__c.field-meta.xml
<CustomField>
    <fullName>Identification__c</fullName>
    <formula>HYPERLINK(State__r.Country__c ,  State__r.Country__r.Name, &quot;_self&quot;) + &quot;-&gt;&quot; +  HYPERLINK(State__c, State__r.Name, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identification</label>
    <type>Text</type>
</CustomField>