src/objects/District__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Districts</relationshipLabel>
    <relationshipName>Districts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>